Refactor: use isBlank() instead of isEmpty()